Реформат templates и создан файл qr.css

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -10,12 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div>
-        User: {{ user }}
-        {% if user.is_authenticated %}
-        <a href="/logout">Logout</a>
-        {% else %}
-        <a href="/login">Login</a>
-        {% endif %}
-    </div>
+<div>
+	Это начальная страница
+</div>
 {% endblock %}
