--- a/main_app/templates/auth.html
+++ b/main_app/templates/auth.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Авторизация</title>
+	{% load static %}
+	<link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'css/auth.css' %}">
 </head>
+
 <body>
-    <form class="auth-form" method="post">
-        {% csrf_token %}
-        <div class="auth-form__title">Авторизация</div>
-        <input type="text" name="username" placeholder="Имя пользователя"/>
-        <input type="password" name="password" placeholder="Пароль"/>
-        <input type="submit" value="Войти">
-        <a class="auth-form__signup" href="/signup/">Зарегистрироваться</a>
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message|safe }}
-            </div>
-            {% endfor %}
-        {% endif %}
-    </form>
+	<form class="auth-form" method="post">
+		{% csrf_token %}
+		<div class="auth-form__title">Авторизация</div>
+		<input type="text" name="username" placeholder="Имя пользователя" />
+		<input type="password" name="password" placeholder="Пароль" />
+		<input type="submit" value="Войти">
+		<a class="auth-form__signup" href="/signup/">Зарегистрироваться</a>
+		{% if messages %}
+		{% for message in messages %}
+		<div class="alert alert-{{ message.tags }}">
+			{{ message|safe }}
+		</div>
+		{% endfor %}
+		{% endif %}
+	</form>
 </body>
+
 </html>
