--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Регистрация</title>
+	{% load static %}
+	<link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'css/auth.css' %}">
 </head>
+
 <body>
-    <form class="auth-form" method="post">
-        {% csrf_token %}
-        <div class="auth-form__title">Регистрация</div>
-        {{ form }}
-        <input type="submit" value="Регистрация">
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message|safe }}
-            </div>
-            {% endfor %}
-        {% endif %}
-    </form>
+	<form class="auth-form" method="post">
+		{% csrf_token %}
+		<div class="auth-form__title">Регистрация</div>
+		{{ form }}
+		<input type="submit" value="Регистрация">
+		{% if messages %}
+		{% for message in messages %}
+		<div class="alert alert-{{ message.tags }}">
+			{{ message|safe }}
+		</div>
+		{% endfor %}
+		{% endif %}
+	</form>
 </body>
+
 </html>
