Добавлена ссылка-заглушка, которая открывает страницу с QR кодом

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -20,9 +20,8 @@
 	</div>
 	{% endif %}
 
-	<div class="etst">
+	<a href="/qr">Создать QR код</a>
 
-	</div>
 
 	{% if messages %}
 	{% for message in messages %}
