--- a/main_app/templates/qr.html
+++ b/main_app/templates/qr.html
@@ -51,7 +51,7 @@
 			height: min,
 			colorDark: "#000000",
 			colorLight: "#ffffff",
-			correctLevel: QRCode.CorrectLevel.H
+			correctLevel: QRCode.CorrectLevel.L
 		});
 	}
 
