Добавлены действия для преподавателя

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -2,9 +2,6 @@
 
 {% load static %}
 
-{% block css-additional %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
-{% endblock %}
 {% block title %}
 Главная страница
 {% endblock %}
@@ -20,9 +17,22 @@
 	</div>
 	{% endif %}
 
-	<a href="/qr">Создать QR код</a>
+	{% if messages %}
+	{% for message in messages %}
+	<div class="profile-info">
+		{{ message|safe }}
+	</div>
+	{% endfor %}
+	{% endif %}
 
-
+	<div class="profile-action">
+		{% if username == user.username %}
+		<a href="/qr">Создать QR код</a>
+		{% endif %}
+		{% if user.is_teacher %}
+		<a href="/qr">Выдать права</a>
+		{% endif %}
+	</div>
 	{% if messages %}
 	{% for message in messages %}
 	<div class="profile-info">
