--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{% load static %}
 	<link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'css/index.css' %}">
 	{% block css-additional %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
 </head>
@@ -16,17 +17,33 @@
 		<div class="site-header__wrapper">
 			<a class="site-header__button" href="/">Домой</a>
 			<div class="user-info">
+				<a id="button-menu">Меню</a>
 				{% if user.is_authenticated %}
-				<a href="/profile">{{ user }}</a>
-				<a href="/logout">Logout</a>
+				{% if user.is_teacher %}
+				<a class="user-button" href="/manage">Управление</a>
+				{% endif %}
+				<a class="user-button" href="/profile">{{ user }}</a>
+				<a class="user-button" href="/logout">Logout</a>
 				{% else %}
-				<a href="/login">Login</a>
+				<a class="user-button" href="/login">Login</a>
 				{% endif %}
 			</div>
 		</div>
 	</header>
 	{% block content %}{% endblock %}
 </body>
+<script type='text/javascript'>
+	document.getElementById("button-menu").addEventListener("click", e => {
+		let buttons = document.getElementsByClassName("user-button")
+		for (const button of buttons) {
+			if (button.style.display === 'block') {
+				button.style.display = ''
+				continue
+			}
+			button.style.display = 'block'
+		}
+	})
+</script>
 {% block script_after %}{% endblock %}
 
 </html>
