--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
 	{% load static %}
 	<link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
 	<link rel="stylesheet" href="{% static 'css/index.css' %}">
-	{% block css-additional %}{% endblock %}
+	{% block additional %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
 </head>
 
