--- a/main_app/templates/error.html
+++ b/main_app/templates/error.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block css-additional %}
+{% block additional %}
 <link rel="stylesheet" href="{% static 'css/error.css' %}">
 {% endblock %}
 {% block title %}
