--- a/main_app/templates/manage.html
+++ b/main_app/templates/manage.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block css-additional %}
+{% block additional %}
 <link rel="stylesheet" href="{% static 'css/manage.css' %}">
 <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'css/modal.css' %}">
 <script defer type="module" src="{% static 'js/manage.js' %}"></script>
