--- a/main_app/static/css/modal.css
+++ b/main_app/static/css/modal.css
@@ -63,6 +63,7 @@
 	padding: 20px 16px;
 	text-align: center;
 	background: #eee;
+	word-break: break-word;
 }
 
 .modal-input,
@@ -75,6 +76,7 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	flex-direction: row;
+	column-gap: 8px;
 }
 
 .modal-input input[type='checkbox'] {
