--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block content %}
-<div>
-	Это начальная страница
+<div style="text-align: center;">
+	<h1>Система контроля cтанка</h1>
+	<img src="{% static 'favicon.ico' %}" alt="Логотип">
 </div>
 {% endblock %}
